fix docker config

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     database:
         image: postgres
         volumes:
-            - ./database:/database
+            - ./backend/database:/database
         environment:
             - POSTGRES_DB=postgres
             - POSTGRES_USER=postgres
@@ -15,7 +15,6 @@ services:
 
     backend:
         build: ./backend
-        command: bash -c "python manage.py runserver 0.0.0.0:8000"
         ports:
             - 8000:8000
         volumes:
