--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,4 +5,4 @@ djangorestframework>=3.13.1
 djangorestframework-simplejwt>=5.2.0
 dj-rest-auth>=3.0.0
 oauthlib>=3.2.2
-psycopg2>=2.9.5
+psycopg2-binary>=2.9.5
