Header and hero banner

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "@mantine/core": "^5.10.4",
     "@mantine/form": "^5.10.3",
     "@mantine/hooks": "^5.10.4",
+    "@svgr/webpack": "^6.5.1",
+    "@tabler/icons-react": "^2.6.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,9 +24,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "prerun": "node ./prerun.js",
+    "start": "npm run prerun && react-scripts start",
+    "build": "npm run prerun && react-scripts build",
+    "test": "npm run prerun && react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
